# ddp_client

./: .gitignore  flake.nix  pyproject.toml
src/ddp_client/: __init__.py  collection_manager.py  constants.py  ddp_client.py  message_router.py  message_sender.py  message_types.py  method_manager.py  session_manager.py  socket.py  subscription_manager.py
