[tool.poetry]
name = "ddp-client"
version = "0.1.0"
description = "Python client for the DDP API"
authors = ["Vipul Tyagi <90324465+VipulOG@users.noreply.github.com>"]
packages = [
    { include = "ddp_client", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^14.1"
ejson = "^0.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
